# AIuth

./: .gitignore  README.md  pyproject.toml
aiuth/: __init__.py
tests/: test_aiuth.py
