[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiuth"
version = "1.0.0"
description = "A production-ready vibe-based authentication library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CertifiedSlop", email = "certifiedslop@example.com"}
]
keywords = ["authentication", "authorization", "ai", "llm", "vibes", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
openrouter = []
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "aiuth[ollama,openai,anthropic,openrouter,dev]",
]

[project.urls]
Homepage = "https://github.com/CertifiedSlop/AIuth"
Repository = "https://github.com/CertifiedSlop/AIuth.git"
Issues = "https://github.com/CertifiedSlop/AIuth/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiuth*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
